link to diabetes data

--- a/Part1-intro/DAT158-Part1-simple_examples.ipynb
+++ b/Part1-intro/DAT158-Part1-simple_examples.ipynb
@@ -1361,7 +1361,7 @@
     "hidden": true
    },
    "source": [
-    "Let's repeat the procedure on another benchmark data set: **Diabetes Data Set**. You'll find a description of the data set together with a link to the data here: https://archive.ics.uci.edu/ml/datasets/diabetes. We'll download the data from https://assets.datacamp.com/production/course_1939/datasets/diabetes.csv since some of the data organization steps have already been done in this version (the data is already uncompressed and gathered in a csv file. \n",
+    "Let's repeat the procedure on another benchmark data set: **Diabetes Data Set**. You'll find a description of the data set together with a link to the data here:  https://www.kaggle.com/uciml/pima-indians-diabetes-database. The data set is also available here: https://assets.datacamp.com/production/course_1939/datasets/diabetes.csv.\n",
     "\n",
     "When doing machine learning a large part of the challenge is to organize data and design good features. We'll talk a lot about this in DAT158, already in Lab 1, but we skip it for now by using a well prepared (and therefore not very realistic) data set."
    ]
@@ -1830,6 +1830,22 @@
    },
    "source": [
     "It's all numbers, and all the samples contain values for all the features (there are 768 non-NaN values). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here's a description of each feature (from <a href=\"https://www.kaggle.com/uciml/pima-indians-diabetes-database\">Kaggle</a>):\n",
+    "- Pregnancies: number of times pregnant\n",
+    "- Glucose: Plasma glucose concentration a 2 hours in an oral glucose tolerance test\n",
+    "- Diastolic: Diastolic blood pressure (mm Hg)\n",
+    "- Triceps: Triceps skin fold thickness (mm)\n",
+    "- Insulin: 2-hour serum insulin (mu U/ml)\n",
+    "- BMI: Body mass index (weight in kg/(height in m)^2)\n",
+    "- DPF: Diabetes pedigree function\n",
+    "- Age: Age (years)\n",
+    "- Diabetes: Class variable (0 or 1)"
    ]
   },
   {
